APPS-3274 Avoid scrollbar in PDF dialog

--- a/web/src/main/resources/scss/dialog-styles.scss
+++ b/web/src/main/resources/scss/dialog-styles.scss
@@ -713,11 +713,6 @@ $shadow-card-hover: 0px 5px 5px -3px rgba(0,0,0,0.2), 0px 8px 10px 1px rgba(0,0,
 			border: none;
 		}
 
-		.dialogContent {
-			height: calc(100% - 116px);
-			margin-bottom: 24px;
-		}
-
 		 .pdfDialogContent {
 			height: 100%;
 			display: flex;
@@ -734,6 +729,8 @@ $shadow-card-hover: 0px 5px 5px -3px rgba(0,0,0,0.2), 0px 8px 10px 1px rgba(0,0,
 
 			&.withPdf {
 				border-color: transparent;
+				display: flex;
+				flex-direction: column;
 			}
 		}
 
@@ -776,11 +773,11 @@ $shadow-card-hover: 0px 5px 5px -3px rgba(0,0,0,0.2), 0px 8px 10px 1px rgba(0,0,
 		}
 
 		.pdfPreview {
-			 display: inline-flex;
-			 display: -webkit-inline-flex;
-			 width: 80%;
-			 height: 100%;
-			 position: relative;
+			display: inline-flex;
+			display: -webkit-inline-flex;
+			width: 80%;
+			flex-grow: 1;
+			position: relative;
 
 			.leftBtn,.rightBtn {
 				width: 24px;
@@ -823,11 +820,7 @@ $shadow-card-hover: 0px 5px 5px -3px rgba(0,0,0,0.2), 0px 8px 10px 1px rgba(0,0,
 				-webkit-flex-direction: row;
 				width: fit-content;
 				height: fit-content;
-				position: relative;
-				margin-left: auto;
-				margin-right: auto;
-				margin-top: 20px;
-				bottom: 10%;
+				margin: 20px auto;
 
 				.gwt-Label {
 					margin: 0px;
@@ -852,6 +845,7 @@ $shadow-card-hover: 0px 5px 5px -3px rgba(0,0,0,0.2), 0px 8px 10px 1px rgba(0,0,
 
 					&.default {
 						border-bottom: 1px solid colors.$black-42;
+						margin-bottom: 1px;
 					}
 
 					&.hover {
